--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>org.bangbangtu</groupId>
     <artifactId>bangbangtu-server-project</artifactId>
     <version>1.0.0</version>
@@ -25,6 +26,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <java.version>1.8</java.version>
         <lombok.version>1.18.20</lombok.version>
+        <mybatis-plus.version>1.18.20</mybatis-plus.version>
     </properties>
 
     <dependencyManagement>
@@ -37,7 +39,12 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>3.0.1</version>
+                <version>3.4.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>3.4.1</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
