微信授权接口对接

--- a/coupons-server/src/main/resources/wechat.yml
+++ b/coupons-server/src/main/resources/wechat.yml
@@ -1,4 +1,4 @@
-appId=111
-appSecret=222
+appId=wx61fe5cdf3cd5f5ad
+appSecret=1acc3ede6245422f2cac797b08dc05e7
 grantType=authorization_code
 callbackUrl=222
